Revision history for autodie

{{$NEXT}}

2.21      2013-09-12 13:17:23 Australia/Melbourne

        Many more improvements from Niels Thykier, great hero of the
        free people. Plus a compatibility patch from Zefram, keeper
        of Carp.

        * SPEED / INTERNAL : Through the magic of globally reuseable
          core leak trampolines, autodie is even faster when used across
          multiple pacakages.

        * SPEED / INTERNAL : Caches used for keeping track of
          fatalised subroutines are faster and leaner.

        * SPEED / INTERNAL : Core subroutine wrappers are now lazily
          compiled.

        * SPEED / INTERNAL : Using autodie while autodie is already in
          effect is now faster and more efficient.

        * INTERNAL : $" and $! are no longer arbitrarily messed with
          for no reason via autodie.  (They're still messed with when
          using Fatal.)

        * SPEED / INTERNAL : The ':all' tag hierachy is expanded
          immediately, in an efficient fashion.

        * INTERNAL : Numerous minor clean-ups. Dead variables removed.
          Typos fixed.

        * SPEED / INTERNAL : import() and _make_fatal() cache more
          aggressively, reducing CPU overhead.

        * TEST: Compatibility with Carp 1.32 (thanks to Zefram).
          RT #88076.

2.20      2013-06-23 16:08:41 PST8PDT

        Many improvements from Niels Thykier, hero of the
        free people.  From GH #25:

        * SPEED / INTERNAL: Less time is spent computing prototypes

        * SPEED / INTERNAL: Leak guards are more efficient.

        * SPEED : Expanding tags (eg: qw(:all)) is now faster.
          This also improves the speed of checking autodying
          code with Perl::Critic.

        * INTERNAL: Expanding of tags is faster and preserves order.

2.19      2013-05-13 10:02:15 Australia/Melbourne

        * BUGFIX: Loading a file that does not change packages while